# injex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  dev-injex-draft.md  habr-injex-draft.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  scorecard.yml
benchmarks/: README.md  resolve_async.py  resolve_graph.py
docs/: api.md  async.md  comparison.md  di-frameworks.md  fastapi-depends.md  index.md  migrating-from-factories.md  performance.md  recipes.md  releasing.md  resolve-all.md  tutorial.md  usage-scenarios.md  validation.md  why-injex.md
examples/: clean_architecture.py  cli_app.py  cli_injection.py  config_injection.py  cyclic.py  factory.py  fastapi_app.py  fastapi_async.py  fastapi_ext.py  fastapi_lifespan.py  integration.py  resources.py  scan.py  testing.py
injex/: __init__.py  container.py  errors.py  planning.py  registry.py
injex/ext/: __init__.py  cli.py  fastapi.py
marketing/: launch-kit.md
site/: 404.html  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml  styles.css
site/articles/: why-tiny-python-di.html
site/docs/: api.html  async.html  comparison.html  di-frameworks.html  fastapi-depends.html  getting-started.html  index.html  migrating-from-factories.html  performance.html  python-dependency-injection.html  recipes.html  usage.html  validation.html  why.html
tests/: _scan_app.py  _scan_other.py  test_async.py  test_async_fuzz.py  test_async_paths.py  test_call.py  test_concurrency.py  test_container.py  test_coverage_edges.py  test_error_messages.py  test_examples.py  test_ext_cli.py  test_ext_fastapi.py  test_flat_creator_fuzz.py  test_named_injection.py  test_perf_semantics.py  test_scan.py  test_sync_resources.py  test_typing.py
