[project]
name = "injex"
version = "1.3.0"
authors = [{name = "vshulcz", email = "vshulcz@gmail.com"}]
description = "Tiny typed dependency injection for Python apps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["dependency-injection", "di", "container", "ioc", "clean-architecture", "testing"]
dependencies = []

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[project.urls]
"Homepage" = "https://github.com/vshulcz/injex"
"Repository" = "https://github.com/vshulcz/injex"
"Documentation" = "https://vshulcz.github.io/injex/"
"Issues" = "https://github.com/vshulcz/injex/issues"
"Changelog" = "https://github.com/vshulcz/injex/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
injex = ["py.typed"]

[tool.setuptools.packages.find]
include = ["injex*"]
