[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "injex"
version = "1.6.0"
authors = [{name = "vshulcz", email = "vshulcz@gmail.com"}]
description = "Tiny typed dependency injection container for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
keywords = ["dependency-injection", "di", "container", "ioc", "clean-architecture", "testing"]
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]

[tool.uv]
# fastapi/httpx are intentionally NOT here: the type-check and FastAPI jobs add
# them per-job (they pull pydantic-core, which has no wheel for Python 3.14 yet).
# The FastAPI tests skip when FastAPI is absent. click is pure-Python and safe on
# every supported version, so it stays a normal dev dependency.
dev-dependencies = [
    "click>=8.0",
    "mypy>=1.12.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/vshulcz/injex"
"Repository" = "https://github.com/vshulcz/injex"
"Documentation" = "https://vshulcz.github.io/injex/"
"Issues" = "https://github.com/vshulcz/injex/issues"
"Changelog" = "https://github.com/vshulcz/injex/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
injex = ["py.typed"]

[tool.setuptools.packages.find]
include = ["injex*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends() in argument defaults is the documented idiom.
"examples/*" = ["B008"]
"injex/ext/fastapi.py" = ["B008"]
# B024: abstract-base test fixtures intentionally have no abstract methods.
# B008: FastAPI's Depends()/Provide() in defaults is the documented idiom.
"tests/*" = ["B024", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true

# Tests favour readability over full annotations; keep them type-checked but
# don't require every fixture/helper to be annotated.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
check_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=injex --cov-report=term-missing"

[tool.coverage.run]
source = ["injex"]

[tool.coverage.report]
fail_under = 90
show_missing = true
